--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -104,6 +104,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\AddressMapperTests.cs" />
+    <Compile Include="Mappers\ApprenticeshipVacancyMapperTests.cs" />
+    <Compile Include="Mappers\VacancyDurationMapperTests.cs" />
+    <Compile Include="Mappers\WageMapperTests.cs" />
+    <Compile Include="Providers\Version51\VacancyDetailsProviderTests.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -136,6 +141,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
