--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -91,6 +91,10 @@
       <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Azure.KeyVault.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Azure.KeyVault.Core.1.0.0\lib\net40\Microsoft.Azure.KeyVault.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -134,8 +138,8 @@
     <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <Private>False</Private>
     </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Storage, Version=4.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAzure.Storage.4.3.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
+    <Reference Include="Microsoft.WindowsAzure.Storage, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WindowsAzure.Storage.5.0.0\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -271,6 +275,10 @@
     <Compile Include="IoC\StructureMapServiceBehavior.cs" />
     <Compile Include="IoC\StructureMapServiceHost.cs" />
     <Compile Include="IoC\StructureMapServiceHostFactory.cs" />
+    <Compile Include="Mappers\Version51\AddressMapper.cs" />
+    <Compile Include="Mappers\Version51\ApprenticeshipVacancyMapper.cs" />
+    <Compile Include="Mappers\Version51\VacancyDurationMapper.cs" />
+    <Compile Include="Mappers\Version51\WageMapper.cs" />
     <Compile Include="MessageContracts\Version50\BulkVacancyUploadRequest.cs" />
     <Compile Include="MessageContracts\Version50\BulkVacancyUploadResponse.cs" />
     <Compile Include="MessageContracts\Version50\GetApprenticeshipFrameworksRequest.cs" />
@@ -342,7 +350,8 @@
     <Compile Include="Namespaces\Version50\Namespace.cs" />
     <Compile Include="Namespaces\Version51\Namespace.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\VacancyDetailsProvider.cs" />
+    <Compile Include="Providers\Version51\IVacancyDetailsProvider.cs" />
+    <Compile Include="Providers\Version51\VacancyDetailsProvider.cs" />
     <Compile Include="ServiceContracts\Version50\IApplicationTracking.cs" />
     <Compile Include="ServiceContracts\Version50\IBulkVacancyUpload.cs" />
     <Compile Include="ServiceContracts\Version50\IReferenceData.cs" />
@@ -379,10 +388,12 @@
       <Project>{A2D82061-BCBD-4030-9EB4-5148AEE79241}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Logging</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj">
+      <Project>{A3B35EFD-CD80-4366-A857-788EADD145A9}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mappers\Version51\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
