--- a/src/SFA.Apprenticeship.Api.AvService/Web.config
+++ b/src/SFA.Apprenticeship.Api.AvService/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.diagnostics>
     <trace>
@@ -9,6 +9,11 @@
       </listeners>
     </trace>
   </system.diagnostics>
+
+  <appSettings>
+    <add key="ConfigurationPath" value="Configs\settings.config" />
+  </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
