--- a/src/SFA.Apprenticeship.Api.AvService/packages.config
+++ b/src/SFA.Apprenticeship.Api.AvService/packages.config
@@ -4,6 +4,7 @@
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net452" />
   <package id="EnterpriseLibrary.ExceptionHandling.WCF" version="6.0.1304.0" targetFramework="net452" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
@@ -14,5 +15,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="structuremap" version="3.1.6.186" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net451" />
-  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="5.0.0" targetFramework="net451" />
 </packages>
