--- a/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.UnitTests/SFA.Apprenticeships.Infrastructure.UnitTests.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Postcode\PostalAddressLookupProviderTests.cs" />
     <Compile Include="Postcode\PostcodeServiceTests.cs" />
     <Compile Include="Presentation\VacancyTypePresenterTests.cs" />
+    <Compile Include="Presentation\WagePresenterTests.cs" />
     <Compile Include="Processes\ApplicationStatusChangedSubscriberTests.cs" />
     <Compile Include="Processes\Builders\ApplicationStatusChangedSubscriberBuilder.cs" />
     <Compile Include="Processes\Builders\EmailRequestSubscriberBuilder.cs" />
