--- a/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
+++ b/src/SFA.Apprenticeships.Web.Candidate/SFA.Apprenticeships.Web.Candidate.csproj
@@ -796,6 +796,10 @@
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>MyApplications.generated.cs</LastGenOutput>
     </Content>
+    <Content Include="Views\ApprenticeshipSearch\_wage.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>_wage.generated.cs</LastGenOutput>
+    </Content>
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1096,6 +1100,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Settings.cshtml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ApprenticeshipSearch\_wage.generated.cs">
+      <DependentUpon>_wage.cshtml</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Views\Home\Feedback.generated.cs">
       <DependentUpon>Feedback.cshtml</DependentUpon>
