--- a/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.IntegrationTests/SFA.Apprenticeships.Infrastructure.IntegrationTests.csproj
@@ -164,33 +164,13 @@
     <Compile Include="Communication\Candidate\CandidateEmailTests.cs" />
     <Compile Include="Communication\Candidate\CandidateEmailTokenGenerator.cs" />
     <Compile Include="Communication\VoidSmsDispatcherTests.cs" />
-    <Compile Include="Elastic\Configuration\ElasticsearchClientFactoryTests.cs" />
-    <Compile Include="Elastic\Configuration\ElastricsearchConfigurationTests.cs" />
     <Compile Include="EmployerDataService\EmployerDataServiceTests.cs" />
-    <Compile Include="LegacyWebServices\GatewayVacancyDataProviderIntegrationTests.cs" />
-    <Compile Include="LegacyWebServices\GatewayVacancyIndexDataProviderIntegrationTests.cs" />
-    <Compile Include="LegacyWebServices\Helpers\TestApplicationBuilder.cs" />
-    <Compile Include="LegacyWebServices\Helpers\TestCandidateHelper.cs" />
-    <Compile Include="LegacyWebServices\LegacyApplicationProviderIntegrationTests.cs" />
-    <Compile Include="LegacyWebServices\LegacyApplicationStatusesProviderIntegrationTests.cs" />
-    <Compile Include="LegacyWebServices\LegacyCandidateProviderIntegrationTests.cs" />
-    <Compile Include="LegacyWebServices\ReferenceDataProviderTests.cs" />
-    <Compile Include="LegacyWebServices\VacancyServiceTests.cs" />
-    <Compile Include="Location\LocationLookupProviderTests.cs" />
-    <Compile Include="Monitor\Repositories\ApprenticeshipMetricsRepositoryTests.cs" />
-    <Compile Include="Monitor\Repositories\CandidateMetricsRepositoryTests.cs" />
     <Compile Include="Postcode\PostalAddressLookupProviderTests.cs" />
     <Compile Include="Postcode\PostalAddressDetailsServiceTests.cs" />
     <Compile Include="Postcode\PostCodeBaseTests.cs" />
     <Compile Include="Postcode\PostcodeServiceTests.cs" />
     <Compile Include="RabbitMq\Configuration\RabbitConfigurationTests.cs" />
-    <Compile Include="UserDirectory\UserDirectoryProviderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VacancyIndexer\IndexingInitialisationTests.cs" />
-    <Compile Include="VacancySearch\AllVacanciesProviderTests.cs" />
-    <Compile Include="VacancySearch\TraineeshipVacancySearchTests.cs" />
-    <Compile Include="VacancySearch\SearchConfigurationShould.cs" />
-    <Compile Include="VacancySearch\ApprenticeshipVacancySearchTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -270,29 +250,13 @@
       <Project>{D34D27D3-79A9-407E-86EF-AF3AC0EA024B}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Communication</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Elastic.Common\SFA.Apprenticeships.Infrastructure.Elastic.Common.csproj">
-      <Project>{F75B0C62-89B5-473D-AF2D-366A5A6722AC}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Elastic.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.EmployerDataService\SFA.Apprenticeships.Infrastructure.EmployerDataService.csproj">
       <Project>{C7CB47E8-C024-4DC0-9BDC-E325D3BFEADC}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.EmployerDataService</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.LegacyWebServices\SFA.Apprenticeships.Infrastructure.LegacyWebServices.csproj">
-      <Project>{6E8E77CA-BB23-45DE-AADD-236CAFBC66E3}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.LegacyWebServices</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.LocationLookup\SFA.Apprenticeships.Infrastructure.LocationLookup.csproj">
-      <Project>{1C6F7710-0AE6-4D9F-BC73-0FAA9C9C60CA}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.LocationLookup</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Logging\SFA.Apprenticeships.Infrastructure.Logging.csproj">
       <Project>{A2D82061-BCBD-4030-9EB4-5148AEE79241}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Monitor\SFA.Apprenticeships.Infrastructure.Monitor.csproj">
-      <Project>{61619F66-5F17-4EF7-A8CF-BA720BEA3AD3}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Monitor</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Postcode\SFA.Apprenticeships.Infrastructure.Postcode.csproj">
       <Project>{ABD48D09-C35E-42CE-8A4D-81550C2B8554}</Project>
@@ -301,18 +265,6 @@
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Mongo\SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj">
       <Project>{A4DE4AF3-F06D-4D0F-AF2E-E72A11BAB49B}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.UserDirectory\SFA.Apprenticeships.Infrastructure.UserDirectory.csproj">
-      <Project>{3FD05F32-F39C-4ACF-8B3B-571B2D20899E}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.UserDirectory</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.VacancyIndexer\SFA.Apprenticeships.Infrastructure.VacancyIndexer.csproj">
-      <Project>{02D19199-A4BB-484A-AA48-208C7B6D819F}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.VacancyIndexer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.VacancySearch\SFA.Apprenticeships.Infrastructure.VacancySearch.csproj">
-      <Project>{913445EC-3175-4AFB-869C-F03B6FD2940A}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.VacancySearch</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.WebServices\SFA.Apprenticeships.Infrastructure.WebServices.csproj">
       <Project>{0D94A2DF-6D5A-4DEC-B6A1-137F3B461B47}</Project>
@@ -330,9 +282,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\Reference\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
